# Bit2Vid

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/bit2vid/: __init__.py  cli.py  config.py  crypto.py  decoder.py  ecc.py  encoder.py  errors.py  ffmpeg.py  transport.py
src/cipherframe/: __init__.py  cli.py  config.py  crypto.py  decoder.py  ecc.py  encoder.py  errors.py  ffmpeg.py  transport.py
tests/: test_core.py
