[build-system]
requires = ["setuptools>=69", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "bit2vid"
version = "0.1.0"
description = "Encrypt and encode arbitrary binary files into resilient MP4 video frames."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Bit2Vid Contributors" }]
keywords = ["ffmpeg", "mp4", "aes-gcm", "reed-solomon", "steganography", "backup"]
dependencies = [
  "numpy>=1.24",
  "pycryptodome>=3.20",
  "reedsolo>=1.7",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "build>=1.0",
  "twine>=4.0",
]

[project.urls]
Homepage = "https://github.com/bit2vid/bit2vid"
Documentation = "https://github.com/bit2vid/bit2vid#readme"
Repository = "https://github.com/bit2vid/bit2vid.git"
Issues = "https://github.com/bit2vid/bit2vid/issues"

[project.scripts]
bit2vid = "bit2vid.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["bit2vid*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
